# tarok

./: .gitignore  .gitmodules  LICENSE  README.md
.circleci/: config.yml
.docker/: build.Dockerfile  run.Dockerfile
.github/workflows/: ci-workflow.yml
tarok/: CMakeLists.txt  install.sh
tarok/include/tarok/: tarok.h
tarok/python/: main.py  max_game_length.py  play_game.py  requirements-dev.txt  requirements.txt  run_random_games.py  show_info_states.py
tarok/src/: CMakeLists.txt  cards.cpp  cards.h  contracts.cpp  contracts.h  game.cpp  game.h  main.cpp  py_bindings.cpp  state.cpp  state.h  tarok.cpp  tarok.h
tarok/test/: CMakeLists.txt  cards_tests.cpp  debugging_runner.cpp  game_tests.cpp  state_bidding_phase_tests.cpp  state_captured_mond_tests.cpp  state_card_dealing_phase_tests.cpp  state_talon_exchange_phase_tests.cpp  state_tests.cpp  state_tests.h  state_tricks_playing_phase_tests.cpp  tarok_utils.cpp  tarok_utils.h
tarok/tests/: CMakeLists.txt  game_tests.cpp
